--- a/_posts/2016-10-04-chad-test.md
+++ b/_posts/2016-10-04-chad-test.md
@@ -1,16 +1,19 @@
 ---
 layout: post
-
-title: "Open-Sourcing the Coveo JavaScript Search Framework"
-tags: [JavaScript, SearchFramework, Open-Source, Search UI]
-
+title: Open-Sourcing the Coveo JavaScript Search Framework
+tags:
+  - JavaScript
+  - SearchFramework
+  - Open-Source
+  - Search UI
 author:
   name: Alexandre Moreau
-  bio:  Technical Writer
-  image: amoreauCoveo.jpg
+  bio: Technical Writer
+  image: cjohnsonCoveo.jpg
+published: true
 ---
 
-In July 2016, the Coveo Search UI, also known as the Coveo JavaScript Search Framework, became open-source. This means that, from now on, anyone will be able to go on GitHub, take the Coveo Search UI, and modify the code itself to adapt it to their own needs.
+Testing.  In July 2016, the Coveo Search UI, also known as the Coveo JavaScript Search Framework, became open-source. This means that, from now on, anyone will be able to go on GitHub, take the Coveo Search UI, and modify the code itself to adapt it to their own needs.
 <!-- more -->
 
 Although it is called the JavaScript Search Framework, the code is written using [TypeScript](http://www.typescriptlang.org/). The TypeScript code is then compiled into JavaScript, which allows us to modify our code base without the fear of breaking the framework.
