--- a/_posts/2017-02-09-coveo-blitz-2017.md
+++ b/_posts/2017-02-09-coveo-blitz-2017.md
@@ -18,6 +18,8 @@ After months of preparation, the seventh edition of Coveo Blitz was held on Janu
 
 A total of 58 students from 6 universities and colleges participated this year. We opened the registration on October 18th and all the available places (15 teams of 4) were filled by November 3rd.
 
+<!-- more -->
+
 # The Coveo Team
 
 Again this year, a lot of people from Coveo participated to the event and I want to personally thank them for their involvement. I’m always amazed by the people’s commitment to make this event better each year!
@@ -92,15 +94,15 @@ This year, on top of the 15 teams, 2 Coveo teams also took part in the contest. 
 
 What was interesting this year is that most teams were able to have a bot that did something. Not only something random, but some logical decisions based on the information on the map. This led to interesting matches, but less fighting than last year because of the new concept (filling customer order). We managed to have the right level of difficulty, teams were able to actually accomplish something, but had to work hard to get a really good bot.
 
-![The presentation of the contest, early in the morning](image_0.jpg)
+![The presentation of the contest, early in the morning]({{ site.baseurl }}/images/20170209-coveo-blitz/image_0.jpg)
 
 The presentation of the contest, early in the morning
 
-![Screenshot of the final match](image_1.png)
+![Screenshot of the final match]({{ site.baseurl }}/images/20170209-coveo-blitz/image_1.png)
 
 Screenshot of the final match
 
-![The winners and their prize](image_2.jpg)
+![The winners and their prize]({{ site.baseurl }}/images/20170209-coveo-blitz/image_2.jpg)
 
 The winners and their prize
 
@@ -132,5 +134,4 @@ The 2017 edition was great and we look forward to next year’s edition in our b
 
 One last note... I started a tradition a couple of years ago when I actually jumped and let the winners catch me (don’t try this at home, I’m a trained professional!). So, here’s the picture of this for 2017!
 
-![](image_3.jpg)
-
+![]({{ site.baseurl }}/images/20170209-coveo-blitz/image_3.jpg)
