Fixed some weird problem coming from my editor

--- a/_posts/2017-02-09-coveo-blitz-2017.md
+++ b/_posts/2017-02-09-coveo-blitz-2017.md
@@ -6,7 +6,7 @@ title: "Coveo Blitz 2017"
 tags: [Coveo Blitz]
 
 author:
-  name: Marc Sanfaon
+  name: Marc Sanfaçon
   bio: SVP Technology
   twitter: msanfacon
   image: msanfacon.png
@@ -14,7 +14,7 @@ author:
 
 # 7th edition 
 
-After months of preparation, the seventh edition of Coveo Blitz was held on January 7th 2017. As was the case in the last few years, the contest was held in our Quebec City office. Participants like to see our offices and the work environment we offer - oh, and heres a scoop: next year, it will be held in our brand new offices!
+After months of preparation, the seventh edition of Coveo Blitz was held on January 7th 2017. As was the case in the last few years, the contest was held in our Quebec City office. Participants like to see our offices and the work environment we offer - oh, and here's a scoop: next year, it will be held in our brand new offices!
 
 A total of 58 students from 6 universities and colleges participated this year. We opened the registration on October 18th and all the available places (15 teams of 4) were filled by November 3rd.
 
@@ -22,13 +22,13 @@ A total of 58 students from 6 universities and colleges participated this year. 
 
 # The Coveo Team
 
-Again this year, a lot of people from Coveo participated to the event and I want to personally thank them for their involvement. Im always amazed by  peoples commitment to make this event better each year!
+Again this year, a lot of people from Coveo participated to the event and I want to personally thank them for their involvement. I'm always amazed by people's commitment to make this event better each year!
 
-One interesting thing about this years contest is that participants from the very first Coveo Blitz held in 2011 were hired in 2016 and worked on the creation of this years challenge. Since the main goal of Coveo Blitz is to spread the word on Coveo and hire emerging talents, its great to see its working and people want to participate in the preparation of the contest.
+One interesting thing about this year's contest is that participants from the very first Coveo Blitz held in 2011 were hired in 2016 and worked on the creation of this year's challenge. Since the main goal of Coveo Blitz is to spread the word on Coveo and hire emerging talents, it's great to see it's working and people want to participate in the preparation of the contest.
 
 # The Challenge
 
-Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we dont want this to be [too challenging]({% post_url the-tale-of-a-programming-contest-part2 %}) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
+Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging]({% post_url the-tale-of-a-programming-contest-part2 %}) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
 
 The [2016 edition]({% post_url the-story-behind-blitz-2016 %}) was based on [Vindinium](http://vindinium.org/), an AI contest platform, and was a huge success. We modified the original contest so that the costs were different and also added spike tiles that caused damage to heroes. This was enough to change the game and add complexity to the bots in the first edition.
 
@@ -86,13 +86,13 @@ Each year, we gather volunteers to actually test the contest. This year, I decid
 
 Several employees created their bot and made them fight against each other to fine tune the rules we put in place. We also made sure the system could sustain several games going on at once by running performance tests.
 
-These steps are important to ensure that everything works fine the day of the contest and we dont get [Coveos Grumpy Cat]({% post_url the-tale-of-a-programming-contest %}) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed..
+These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat]({% post_url the-tale-of-a-programming-contest %}) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed..
 
 Even though this is the 7th edition, it seems that the rush is inevitable. At the same time, it comes with the adrenaline that, I think, we look forward to each year.
 
 # D-Day
 
-This year, on top of the 15 teams, 2 Coveo teams also took part in the contest. They could not participate in the finals and, of course, could not win the prize. This is something weve done almost every year and Coveo people are looking forward to participate.
+This year, on top of the 15 teams, 2 Coveo teams also took part in the contest. They could not participate in the finals and, of course, could not win the prize. This is something we've done almost every year and Coveo people are looking forward to participate.
 
 What was interesting this year is that most teams were able to have a bot that did something. Not just something random; they took logical decisions based on the information on the map. This led to interesting matches, but less fighting than last year because of the new concept (filling customer order). We managed to have the right level of difficulty; teams were able to actually accomplish something, but had to work hard to get a really good bot.
 
@@ -109,7 +109,7 @@ The winners and their prize
 
 One thing we learned this year is to make sure the services we provide either have a constant output during the day, or that contestants know they might not get the same result each time they use them. Our idea of making the contestants suffer with the pathfinding service, that we initially thought would be funny, was, in hindsight, not as good as we thought it would be.
 
-If we want to do something like that again, were going to make sure to let the contestants know the service may fail during the day. This way, they will know that writing their own service is the way to go. Or, like someone from Coveo did, start 10 threads to call the service to try to dodge the imposed suffering level.
+If we want to do something like that again, we're going to make sure to let the contestants know the service may fail during the day. This way, they will know that writing their own service is the way to go. Or, like someone from Coveo did, start 10 threads to call the service to try to dodge the imposed suffering level.
 
 # Some tricks for next year
 
@@ -129,9 +129,9 @@ For Coveo Blitz, we leverage AWS for the contest. Participants code on their lap
 
 # Wrap up
 
-The 2017 edition was great and we look forward to next years edition in our brand new office! I hope to see you then!
+The 2017 edition was great and we look forward to next year's edition in our brand new office! I hope to see you then!
 
-One last note... I started a tradition a couple of years ago when I actually jumped and let the winners catch me (dont try this at home, Im a trained professional!). So, heres the picture of this for 2017!
+One last note... I started a tradition a couple of years ago when I actually jumped and let the winners catch me (don't try this at home, I'm a trained professional!). So, here's the picture of this for 2017!
 
 ![]({{ site.baseurl }}/images/20170209-coveo-blitz/image_3.jpg)
 
