Change date and some minor tweaks

--- a/_posts/2017-02-10-coveo-blitz-2017.md
+++ b/_posts/2017-02-10-coveo-blitz-2017.md
@@ -12,7 +12,7 @@ author:
   image: msanfacon.png
 ---
 
-# 7th edition 
+## 7th edition 
 
 After months of preparation, the seventh edition of Coveo Blitz was held on January 7th 2017. As was the case in the last few years, the contest was held in our Quebec City office. Participants like to see our offices and the work environment we offer - oh, and here's a scoop: next year, it will be held in our brand new offices!
 
@@ -20,13 +20,13 @@ A total of 58 students from 6 universities and colleges participated this year. 
 
 <!-- more -->
 
-# The Coveo Team
+## The Coveo Team
 
 Again this year, a lot of people from Coveo participated to the event and I want to personally thank them for their involvement. I'm always amazed by people's commitment to make this event better each year!
 
 One interesting thing about this year's contest is that participants from the very first Coveo Blitz held in 2011 were hired in 2016 and worked on the creation of this year's challenge. Since the main goal of Coveo Blitz is to spread the word on Coveo and hire emerging talents, it's great to see it's working and people want to participate in the preparation of the contest.
 
-# The Challenge
+## The Challenge
 
 Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging]({% post_url 2015-02-10-the-tale-of-a-programming-contest-part2 %}) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
 
@@ -78,7 +78,7 @@ private void makeTheContestantsSuffer() {
 
 We told the participants that there was a bug in the service and we were working hard to find it. With every fix we made, we actually increased the suffering level up to a point where we told the participants that we had **finally** found the bug in the function and had fixed it! The idea here was to give the teams a head start early in the day while they coded a better algorithm. As it turned out, several teams still used our service in the final rounds so we removed the suffering level after round 3.
 
-# Getting ready for D-Day
+## Getting ready for D-Day
 
 As always, there is a Blitz rush starting a bit before Christmas up until the last minute before the contest. Everyone puts the final touches for D-Day: order food and drinks, setup the contest area, install the projectors, speakers, and of course, finalize the code for the contest.
 
@@ -86,11 +86,11 @@ Each year, we gather volunteers to actually test the contest. This year, I decid
 
 Several employees created their bot and made them fight against each other to fine tune the rules we put in place. We also made sure the system could sustain several games going on at once by running performance tests.
 
-These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat]({% post_url 2014-12-22-the-tale-of-a-programming-contest %}) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed..
+These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat]({% post_url 2014-12-22-the-tale-of-a-programming-contest %}) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed.
 
 Even though this is the 7th edition, it seems that the rush is inevitable. At the same time, it comes with the adrenaline that, I think, we look forward to each year.
 
-# D-Day
+## D-Day
 
 This year, on top of the 15 teams, 2 Coveo teams also took part in the contest. They could not participate in the finals and, of course, could not win the prize. This is something we've done almost every year and Coveo people are looking forward to participate.
 
@@ -105,15 +105,15 @@ Screenshot of the final match
 ![The winners and their prize]({{ site.baseurl }}/images/20170209-coveo-blitz/image_2.jpg)
 The winners and their prize
 
-# Lesson learned
+## Lesson learned
 
 One thing we learned this year is to make sure the services we provide either have a constant output during the day, or that contestants know they might not get the same result each time they use them. Our idea of making the contestants suffer with the pathfinding service, that we initially thought would be funny, was, in hindsight, not as good as we thought it would be.
 
 If we want to do something like that again, we're going to make sure to let the contestants know the service may fail during the day. This way, they will know that writing their own service is the way to go. Or, like someone from Coveo did, start 10 threads to call the service to try to dodge the imposed suffering level.
 
-# Some tricks for next year
+## Some tricks for next year
 
-These are similar tips I gave to participants so they get the most out of Coveo Blitz next year. These are similar advices I gave in a previous post.
+Again, I want to give advice I gave to participants so they get the most out of Coveo Blitz next year. These are similar tips I gave in a previous post.
 
 1. **Be prepared**
 Every year, we see the difference between the teams who spent time to prepare for the contest compared to the ones who did not. The ones who prepared already have the tools they want to use installed on their computer and pretty much know the role of each person on the team. On the other hand, some teams decide what language they will use the day of the contest! That makes a big difference when you have limited time to complete the challenge. You'll have a lot more fun if you are prepared, trust me!
@@ -127,7 +127,7 @@ You're a team and you need to sync often; make sure you're all working in the sa
 4. **Automate your builds and deployments**
 For Coveo Blitz, we leverage AWS for the contest. Participants code on their laptops and then have to deploy the code on AWS to run it. I highly suggest the deployment steps are automated so that you can deploy fast and revert fast in case the previous version was better than the new one - like this will happen. ;)
 
-# Wrap up
+## Wrap up
 
 The 2017 edition was great and we look forward to next year's edition in our brand new office! I hope to see you then!
 
