--- a/_posts/2017-02-10-coveo-blitz-2017.md
+++ b/_posts/2017-02-10-coveo-blitz-2017.md
@@ -28,9 +28,9 @@ One interesting thing about this year's contest is that participants from the ve
 
 ## The Challenge
 
-Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging]({% post_url 2015-02-10-the-tale-of-a-programming-contest-part2 %}) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
+Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging](http://source.coveo.com/2015/02/10/the-tale-of-a-programming-contest-part2/) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
 
-The [2016 edition]({% post_url 2016-01-13-the-story-behind-blitz-2016 %}) was based on [Vindinium](http://vindinium.org/), an AI contest platform, and was a huge success. We modified the original contest so that the costs were different and also added spike tiles that caused damage to heroes. This was enough to change the game and add complexity to the bots in the first edition.
+The [2016 edition](http://source.coveo.com/2016/01/13/the-story-behind-blitz-2016/) was based on [Vindinium](http://vindinium.org/), an AI contest platform, and was a huge success. We modified the original contest so that the costs were different and also added spike tiles that caused damage to heroes. This was enough to change the game and add complexity to the bots in the first edition.
 
 We decided to reuse the same platform, but wanted to change the challenge enough to prevent people from recycling the algorithms or components from last year. The main reason for keeping the same basic challenge is cost; creating a contest like Coveo Blitz is a big investment and starting something new each year is a lot of work.
 
@@ -86,7 +86,7 @@ Each year, we gather volunteers to actually test the contest. This year, I decid
 
 Several employees created their bot and made them fight against each other to fine tune the rules we put in place. We also made sure the system could sustain several games going on at once by running performance tests.
 
-These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat]({% post_url 2014-12-22-the-tale-of-a-programming-contest %}) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed.
+These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat](http://source.coveo.com/2014/12/22/the-tale-of-a-programming-contest/) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed.
 
 Even though this is the 7th edition, it seems that the rush is inevitable. At the same time, it comes with the adrenaline that, I think, we look forward to each year.
 
@@ -115,16 +115,16 @@ If we want to do something like that again, we're going to make sure to let the 
 
 Again, I want to give advice I gave to participants so they get the most out of Coveo Blitz next year. These are similar tips I gave in a previous post.
 
-1. **Be prepared**
+### Be prepared
 Every year, we see the difference between the teams who spent time to prepare for the contest compared to the ones who did not. The ones who prepared already have the tools they want to use installed on their computer and pretty much know the role of each person on the team. On the other hand, some teams decide what language they will use the day of the contest! That makes a big difference when you have limited time to complete the challenge. You'll have a lot more fun if you are prepared, trust me!
 
-2. **Set small, incremental goals during the day**
+### Set small, incremental goals during the day
 This is crucial to achieving results. Use git (or whatever) to track modifications to the code. Use tags so that you can easily revert to working code. Get something basic working and take a snapshot (save the executable, tag in git, ). Improve from that point. For example, have a random bot working, then add intelligence to it.
 
-3. **Split the work and sync with your team**
+### Split the work and sync with your team
 You're a team and you need to sync often; make sure you're all working in the same direction. One thing that seems to give good results here is to split the work and do pair programming.
 
-4. **Automate your builds and deployments**
+### Automate your builds and deployments
 For Coveo Blitz, we leverage AWS for the contest. Participants code on their laptops and then have to deploy the code on AWS to run it. I highly suggest the deployment steps are automated so that you can deploy fast and revert fast in case the previous version was better than the new one - like this will happen. ;)
 
 ## Wrap up
