--- a/_posts/2018-04-18-facets.md
+++ b/_posts/2018-04-18-facets.md
@@ -25,21 +25,22 @@ A facet is usually designed as a box containing check boxes or links allowing us
 
 # Position of the Facets
 
-We usually see facets on the left side of the search page, and there is a good reason for that: this is what users expect! In most countries, people read from left to right and always start scanning the page from the top-left corner. In fact, [eyetracking studies](https://www.nngroup.com/articles/horizontal-attention-leans-left/) have shown that users spend 80% of their time looking at the left half of the page and 20% at the right half. Positioning facets on the right side therefore results in low adoption and decreases the usability of the search page, since your customers won’t be able to filter results because they won’t find it.
+We usually see facets on the left side of the search page, and there is a good reason for that: this is what users expect! In most countries, people read from left to right and always start scanning the page from the top-left corner. In fact, [eyetracking studies](https://www.nngroup.com/articles/horizontal-attention-leans-left/) have shown that users spend 80% of their time looking at the left half of the page and 20% at the right half. Positioning facets on the right side therefore results in low adoption and decreases the usability of the search page, since your customers won’t be able to filter results because they won’t find the facets.
 
 
 # Decide on your Filter Value-Selection Paradigm
+
 You’re right: this seem complicated, but I assure you it’s not. When a user filters search results, they either want to go deeper into the content to see what’s there (drill-down paradigm) or they might have specific criteria in mind and want to do a batch filtering (parallel paradigm)<sup>2</sup>. Someone can of course want to do both in their visit on a website, but rarely need to do both at the same time. 
 
 
+
 Let me give you an example. If a customer on the B&H website is looking for a projector for their home theater, they might search for “projector” and then go to the Home Theater Projectors category (drill-down paradigm). After that, they might want to refine by price, brand, resolution, or any other criteria that is relevant for a home projector using facets (parallel paradigm).
-A lot of websites have nice headers or banners on their homepage. However, the search results page is not a good place for that. You need to design that page to maximize the number of results users can see, without cluttering the interface.
 
  
 ![bh](/images/2018-04-18-facets/bh.png)
 > The user first did a search for “Projector” and then selected the “Home Theater Projectors” category to narrow the results to what they were looking for. 
  
- Usually, the component used for a drill-down selection is a link because it usually indicates a straightforward equals condition, for example “I want to narrow my search results to Department equals Home projectors”. Sometimes, this type of filter can be designed as horizontal tabs if you don’t need to display multiple levels in a hierarchy. However, if you have to display a hierarchy, a facet with multi-level category links is bette
+ Usually, the component used for a drill-down selection is a link because it usually indicates a straightforward equals condition, for example “I want to narrow my search results to Department equals Home projectors”. Sometimes, this type of filter can be designed as horizontal tabs if you don’t need to display multiple levels in a hierarchy. However, if you have to display a hierarchy, a facet with multi-level category links is better.
 
 
 ![amazon](/images/2018-04-18-facets/amazon.png)
@@ -51,11 +52,11 @@ The two paradigms complement each other very well. However, mixing them can resu
 
 You can already see that this can be confusing and there is a high chance that no result will be found because there are too many criteria to match. Also, always remember that [people have poor research skills](https://www.nngroup.com/articles/incompetent-search-skills/) in general, as pointed out in 2011 by Jakob Nielsen. It’s always a good idea to stick to what people know and use standard facets that only depict one of the two paradigm at the time.
 
-# Conclusion
+# Are there Downsides to Facets?
 
-Are there downsides to facets ? Not many, but yes, there are some, and it is important you consider it before adding 15 facets to your search page! 
+Not many, but yes, there are some, and it is important you consider them before adding 15 facets to your search page! 
 
-First, to have great facets that are relevant to the search experience, you need to have a good content structure behind it. The content (existing and future) must have applied metadata for each facet. It’s also important to note that the way you classify your products internally in your index will end up on a facet as criterias. So if you use business jargon or industry-specific terms, there is high chances people won’t be able to relate to it. 
+First, to have great facets that are relevant to the search experience, you need to have a good content structure behind it. The content (existing and future) must have applied metadata for each facet. It’s also important to note that the way you classify your products internally in your index will end up on a facet as criteria. So if you use business jargon or industry-specific terms, it is likely people won’t be able to relate to it. 
 
 Secondly, faceted navigation presents more options to the user, increasing the efforts that the user must deploy to interact with the component to reach their goal. Because the [interaction cost](https://www.nngroup.com/articles/interaction-cost-definition/) is higher with facets, we need to be sure that they add value to the search experience. On some search pages with less content, facets are not necessary and other filters like product category tabs or sections can better fulfill the filtering requirement.
 
