Remove hack, it's not needed. Fix all explicit urls in posts.

--- a/_posts/2017-02-10-coveo-blitz-2017.md
+++ b/_posts/2017-02-10-coveo-blitz-2017.md
@@ -28,9 +28,9 @@ One interesting thing about this year's contest is that participants from the ve
 
 ## The Challenge
 
-Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging](http://source.coveo.com/2015/02/10/the-tale-of-a-programming-contest-part2/) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
+Designing the challenge is never an easy task. We want something hard enough so the participants have to really work for it, and we can identify the ones that stand out of the pack - remember, hiring is the goal ;). At the same time, we don't want this to be [too challenging](https://source.coveo.com/2015/02/10/the-tale-of-a-programming-contest-part2/) as this leads to an unrewarding experience for both the participants and the Coveo staff who worked on the challenge.
 
-The [2016 edition](http://source.coveo.com/2016/01/13/the-story-behind-blitz-2016/) was based on [Vindinium](http://vindinium.org/), an AI contest platform, and was a huge success. We modified the original contest so that the costs were different and also added spike tiles that caused damage to heroes. This was enough to change the game and add complexity to the bots in the first edition.
+The [2016 edition](https://source.coveo.com/2016/01/13/the-story-behind-blitz-2016/) was based on [Vindinium](http://vindinium.org/), an AI contest platform, and was a huge success. We modified the original contest so that the costs were different and also added spike tiles that caused damage to heroes. This was enough to change the game and add complexity to the bots in the first edition.
 
 We decided to reuse the same platform, but wanted to change the challenge enough to prevent people from recycling the algorithms or components from last year. The main reason for keeping the same basic challenge is cost; creating a contest like Coveo Blitz is a big investment and starting something new each year is a lot of work.
 
@@ -86,7 +86,7 @@ Each year, we gather volunteers to actually test the contest. This year, I decid
 
 Several employees created their bot and made them fight against each other to fine tune the rules we put in place. We also made sure the system could sustain several games going on at once by running performance tests.
 
-These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat](http://source.coveo.com/2014/12/22/the-tale-of-a-programming-contest/) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed.
+These steps are important to ensure that everything works fine the day of the contest and we don't get [Coveo's Grumpy Cat](https://source.coveo.com/2014/12/22/the-tale-of-a-programming-contest/) (sorry Guillaume ;)) during the event. This is where we decided to change the way customers were creating the orders. At first, it was all random, so each customer had potentially different order which could favor a bot over another based on their starting location. We changed it so that all customers would have an identical list of orders to be executed.
 
 Even though this is the 7th edition, it seems that the rush is inevitable. At the same time, it comes with the adrenaline that, I think, we look forward to each year.
 
