--- a/_posts/2018-01-05-blitz-day.md
+++ b/_posts/2018-01-05-blitz-day.md
@@ -18,7 +18,7 @@ Saturday. 7 AM. Normally I’d be sleeping in. But alas, this Saturday is not li
 
 <!-- more -->
 
-While sitting in the classroom booked by Coveo for Blitz, I finally learned that [all my research and practice over the holidays had paid off](http://source.coveo.com/2017/12/06/blitz-preparation/). The challenge announced for the Blitz was to build a search engine! Well...it was more than JUST a search engine, but my teammates were taking care of the other elements of the challenge.
+While sitting in the classroom booked by Coveo for Blitz, I finally learned that [all my research and practice over the holidays had paid off](https://source.coveo.com/2017/12/06/blitz-preparation/). The challenge announced for the Blitz was to build a search engine! Well...it was more than JUST a search engine, but my teammates were taking care of the other elements of the challenge.
 
  If memory serves me correctly, here’s what we had to do: 
 * Crawl many text files. 
