Add links to the blitz registration page

--- a/_posts/2018-01-05-blitz-day.md
+++ b/_posts/2018-01-05-blitz-day.md
@@ -12,6 +12,8 @@ author:
 
 ---
 
+_Update: Links to the Blitz registration page were added._
+
 ## Blitzday
 
 Saturday. 7 AM. Normally I’d be sleeping in. But alas, this Saturday is not like your regular Saturday. I’m wide awake and super hyped. No, this isn’t the first chapter of my new fantasy book, it’s real. It’s Blitzday. I’m ready to crush through code like never before.
@@ -107,7 +109,7 @@ Francis managed to get his crawler up and running really quickly, which was an e
 
 Last, but not least: **Enjoy the hell out of it!** I created a stronger bond with my friends, met talented people who I now work with and, this is not negligible, got the chance to write that I participated in such a cool event on my quite empty early-career-resume.
 
-Alright! Off I go, I still have some final touch ups to do on this year’s edition of the Blitz. You did register, right?! If not, make sure to join us next year or to follow the event on our Facebook live stream!
+Alright! Off I go, I still have some final touch ups to do on this year’s edition of the Blitz. [You did register, right](https://blitz.coveo.com)?! If not, make sure to join us next year or to follow the event on our Facebook live stream!
 
 Andy out, Blitz on.
 
